# MAJORANA_ACP

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
configs/: inception.yaml  inception_single.yaml  mlp.yaml  mlp_derivative.yaml  mlp_v2.yaml  quick_smoke.yaml  quick_smoke_mlp.yaml  resnet.yaml  resnet_single.yaml  simple_cnn.yaml  simple_cnn_derivative.yaml
configs/cut_acceptance/: resnet_single_ultra_small_background.yaml  resnet_single_ultra_small_signal.yaml  simple_cnn_ultra_small_background.yaml  simple_cnn_ultra_small_signal.yaml
configs/full_data_configs/: inception.yaml  inception_single.yaml  mlp.yaml  mlp_derivative.yaml  mlp_v2.yaml  resnet.yaml  resnet_single.yaml  simple_cnn.yaml  simple_cnn_derivative.yaml
configs/small_data_configs/: resnet_single.yaml  resnet_single_small.yaml  simple_cnn.yaml  simple_cnn_small.yaml
configs/smoke_tests/: quick_smoke.yaml  quick_smoke_mlp.yaml
configs/ultra_small_data_configs/: resnet_single_ultra_small.yaml  simple_cnn_ultra_small.yaml
majorana_acp/cli/: evaluate.py  train.py
majorana_acp/cut_acceptance/: __init__.py  cli.py  config.py  partition.py  pipeline.py  sampler.py
majorana_acp/data/: __init__.py  dataset.py  splits.py
majorana_acp/eval/: __init__.py  evaluator.py
majorana_acp/models/: __init__.py  _norm.py  inception_time.py  mlp.py  registry.py  resnet1d.py  simple_cnn.py
majorana_acp/training/: __init__.py  config.py  (+2 more)
notebooks/: data_visualization.ipynb
tests/: conftest.py  test_config.py  test_data.py  test_evaluator.py  test_loss.py  test_models.py  test_trainer.py
(+16 files in other folders)
