[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "majorana-acp"
version = "0.1.0"
description = "Machine-learning research on the Majorana Demonstrator AI/ML data release"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "pytest>=8.0",
    "ruff>=0.6",
]

# torch / torchvision must come from the CUDA 12.9 index — the system
# NVIDIA driver maxes out at CUDA 12.9, so the default PyPI cu130 wheels
# fail at runtime ("driver too old"). Verified with `nvidia-smi`.
[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length is enforced by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
